# heatExchanger

./: CMakeLists.txt
code/: main.cpp
code/calculator/: calculator.cpp  calculator.h
code/heatExchanger/: heatExchanger.cpp  heatExchanger.h
code/heatExchanger/product/: product.cpp  product.h
